--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -156,303 +156,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {
-            "byteLimit": 2048000,
-            "rowLimit": 10000
-          },
-          "inputWidgets": {},
-          "nuid": "93f6a9f5-b667-4768-b869-ca416c207e22",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "id": "_sLCt_AzdZpr"
-      },
-      "outputs": [],
-      "source": [
-        "from pyspark.sql.functions import udf\n",
-        "from pyspark.sql.types import BooleanType\n",
-        "from pyspark.sql.functions import col\n",
-        "\n",
-        "import math\n",
-        "\n",
-        "# user defined function\n",
-        "def primeNumbercheck(myNum):\n",
-        "\tif myNum==2:\n",
-        "\t\treturn True\n",
-        "\telif myNum%2==0 or myNum==1:\n",
-        "\t\treturn False\n",
-        "\tx=int(math.sqrt(myNum))\n",
-        "\tif x%2==0:\n",
-        "\t\tstrtno=x+1\n",
-        "\telse:\n",
-        "\t\tstrtno=x\n",
-        "\tfor i in range(strtno,1,-2):\n",
-        "\t\tif myNum%i==0:\n",
-        "\t\t\treturn False\n",
-        "\treturn True\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {},
-          "inputWidgets": {},
-          "nuid": "624a9ff8-e9db-4f0c-b997-11f127f123b3",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "id": "6Xt_aN37KZPV"
-      },
-      "outputs": [],
-      "source": [
-        "#register the function primecheck as a\n",
-        "#User Defined Function (UDF) for use with Spark DataFrames\n",
-        "from pyspark.sql.functions import udf\n",
-        "\n",
-        "@udf(returnType=BooleanType())\n",
-        "def primecheck(myNum):\n",
-        "    return primeNumbercheck(myNum)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {
-            "byteLimit": 2048000,
-            "rowLimit": 10000
-          },
-          "inputWidgets": {},
-          "nuid": "2c9dcce1-4b37-42d8-a7fa-33c3d3ac1f9d",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AQn3MSTAdZpr",
-        "outputId": "23b08e14-aa5b-4c28-c5e2-be1a555cfae5"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pyspark.sql.dataframe.DataFrame'>\n"
-          ]
-        }
-      ],
-      "source": [
-        "#create dataframe with sample data 1000 records\n",
-        "df = spark.range(0,100)\n",
-        "\n",
-        "print(type(df))\n",
-        "\n",
-        "#Add a new column isPrime with boolean value as output\n",
-        "df = df.withColumn(\"isPrime\", primecheck(df[\"id\"]))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {
-            "byteLimit": 2048000,
-            "rowLimit": 10000
-          },
-          "inputWidgets": {},
-          "nuid": "84b32eda-24bd-4a19-bada-b67d0a4177fe",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "id": "VOqbY0jBdZps"
-      },
-      "outputs": [],
-      "source": [
-        "#capture the result of only prime records\n",
-        "result = df.filter(df.isPrime==True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {},
-          "inputWidgets": {},
-          "nuid": "11496d0b-dab4-46be-8066-f87c408130ef",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "id": "2TjIF71tLPhS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5d0d53c9-bc81-4ecd-bb51-4e5b170d8f76"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "DataFrame[id: bigint, isPrime: boolean]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ],
-      "source": [
-        "# number of primes cache the result\n",
-        "# visible on spark UI /storage/\n",
-        "result.cache()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {},
-          "inputWidgets": {},
-          "nuid": "f450b87d-4143-4df4-aeb5-8e97e7700bd1",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "collapsed": true,
-        "id": "iqjU-fyUNMPX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aa0da422-c2bb-4652-ab07-e18872f03714"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[Row(id=2, isPrime=True),\n",
-              " Row(id=3, isPrime=True),\n",
-              " Row(id=5, isPrime=True),\n",
-              " Row(id=7, isPrime=True),\n",
-              " Row(id=11, isPrime=True),\n",
-              " Row(id=13, isPrime=True),\n",
-              " Row(id=17, isPrime=True),\n",
-              " Row(id=19, isPrime=True),\n",
-              " Row(id=23, isPrime=True),\n",
-              " Row(id=29, isPrime=True),\n",
-              " Row(id=31, isPrime=True),\n",
-              " Row(id=37, isPrime=True),\n",
-              " Row(id=41, isPrime=True),\n",
-              " Row(id=43, isPrime=True),\n",
-              " Row(id=47, isPrime=True),\n",
-              " Row(id=53, isPrime=True),\n",
-              " Row(id=59, isPrime=True),\n",
-              " Row(id=61, isPrime=True),\n",
-              " Row(id=67, isPrime=True),\n",
-              " Row(id=71, isPrime=True),\n",
-              " Row(id=73, isPrime=True),\n",
-              " Row(id=79, isPrime=True),\n",
-              " Row(id=83, isPrime=True),\n",
-              " Row(id=89, isPrime=True),\n",
-              " Row(id=97, isPrime=True)]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ],
-      "source": [
-        "result.collect()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {},
-          "inputWidgets": {},
-          "nuid": "1010f01f-265e-4f52-9482-7e679bd55a9f",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f74lnvrSUCMe",
-        "outputId": "12f7e3df-ea68-416c-ccb1-2ee2fa07856d"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "25"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ],
-      "source": [
-        "result.count()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "cellMetadata": {
-            "byteLimit": 2048000,
-            "rowLimit": 10000
-          },
-          "inputWidgets": {},
-          "nuid": "4a572bcc-e3db-4051-8c44-bce2f349bd83",
-          "showTitle": false,
-          "tableResultSettingsMap": {},
-          "title": ""
-        },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f76rr6kZdZps",
-        "outputId": "7c4b6145-c7ed-4afd-eceb-34135ef795ff"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "DataFrame[id: bigint, isPrime: boolean]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ],
-      "source": [
-        "# Free up executor memeory by unpersisting cached objects\n",
-        "result.unpersist()"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 11,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
@@ -1092,6 +795,270 @@
       "metadata": {
         "id": "4te8hnouuifx"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {
+            "byteLimit": 2048000,
+            "rowLimit": 10000
+          },
+          "inputWidgets": {},
+          "nuid": "93f6a9f5-b667-4768-b869-ca416c207e22",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "id": "_sLCt_AzdZpr"
+      },
+      "outputs": [],
+      "source": [
+        "from pyspark.sql.functions import udf\n",
+        "from pyspark.sql.types import BooleanType\n",
+        "from pyspark.sql.functions import col\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "# user defined function\n",
+        "def primeNumbercheck(myNum):\n",
+        "\tif myNum==2:\n",
+        "\t\treturn True\n",
+        "\telif myNum%2==0 or myNum==1:\n",
+        "\t\treturn False\n",
+        "\tx=int(math.sqrt(myNum))\n",
+        "\tif x%2==0:\n",
+        "\t\tstrtno=x+1\n",
+        "\telse:\n",
+        "\t\tstrtno=x\n",
+        "\tfor i in range(strtno,1,-2):\n",
+        "\t\tif myNum%i==0:\n",
+        "\t\t\treturn False\n",
+        "\treturn True\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {},
+          "inputWidgets": {},
+          "nuid": "624a9ff8-e9db-4f0c-b997-11f127f123b3",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "id": "6Xt_aN37KZPV"
+      },
+      "outputs": [],
+      "source": [
+        "#register the function primecheck as a\n",
+        "#User Defined Function (UDF) for use with Spark DataFrames\n",
+        "from pyspark.sql.functions import udf\n",
+        "\n",
+        "@udf(returnType=BooleanType())\n",
+        "def primecheck(myNum):\n",
+        "    return primeNumbercheck(myNum)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {
+            "byteLimit": 2048000,
+            "rowLimit": 10000
+          },
+          "inputWidgets": {},
+          "nuid": "2c9dcce1-4b37-42d8-a7fa-33c3d3ac1f9d",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AQn3MSTAdZpr",
+        "outputId": "23b08e14-aa5b-4c28-c5e2-be1a555cfae5"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pyspark.sql.dataframe.DataFrame'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "#create dataframe with sample data 1000 records\n",
+        "df = spark.range(0,100)\n",
+        "\n",
+        "print(type(df))\n",
+        "\n",
+        "#Add a new column isPrime with boolean value as output\n",
+        "df = df.withColumn(\"isPrime\", primecheck(df[\"id\"]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {
+            "byteLimit": 2048000,
+            "rowLimit": 10000
+          },
+          "inputWidgets": {},
+          "nuid": "84b32eda-24bd-4a19-bada-b67d0a4177fe",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "id": "VOqbY0jBdZps"
+      },
+      "outputs": [],
+      "source": [
+        "#capture the result of only prime records\n",
+        "result = df.filter(df.isPrime==True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {},
+          "inputWidgets": {},
+          "nuid": "11496d0b-dab4-46be-8066-f87c408130ef",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "id": "2TjIF71tLPhS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d0d53c9-bc81-4ecd-bb51-4e5b170d8f76"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[id: bigint, isPrime: boolean]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
+      "source": [
+        "# number of primes cache the result\n",
+        "# visible on spark UI /storage/\n",
+        "result.cache()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {},
+          "inputWidgets": {},
+          "nuid": "f450b87d-4143-4df4-aeb5-8e97e7700bd1",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "collapsed": true,
+        "id": "iqjU-fyUNMPX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aa0da422-c2bb-4652-ab07-e18872f03714"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(id=2, isPrime=True),\n",
+              " Row(id=3, isPrime=True),\n",
+              " Row(id=5, isPrime=True),\n",
+              " Row(id=7, isPrime=True),\n",
+              " Row(id=11, isPrime=True),\n",
+              " Row(id=13, isPrime=True),\n",
+              " Row(id=17, isPrime=True),\n",
+              " Row(id=19, isPrime=True),\n",
+              " Row(id=23, isPrime=True),\n",
+              " Row(id=29, isPrime=True),\n",
+              " Row(id=31, isPrime=True),\n",
+              " Row(id=37, isPrime=True),\n",
+              " Row(id=41, isPrime=True),\n",
+              " Row(id=43, isPrime=True),\n",
+              " Row(id=47, isPrime=True),\n",
+              " Row(id=53, isPrime=True),\n",
+              " Row(id=59, isPrime=True),\n",
+              " Row(id=61, isPrime=True),\n",
+              " Row(id=67, isPrime=True),\n",
+              " Row(id=71, isPrime=True),\n",
+              " Row(id=73, isPrime=True),\n",
+              " Row(id=79, isPrime=True),\n",
+              " Row(id=83, isPrime=True),\n",
+              " Row(id=89, isPrime=True),\n",
+              " Row(id=97, isPrime=True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
+      "source": [
+        "result.collect()\n",
+        "result.count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {
+            "byteLimit": 2048000,
+            "rowLimit": 10000
+          },
+          "inputWidgets": {},
+          "nuid": "4a572bcc-e3db-4051-8c44-bce2f349bd83",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f76rr6kZdZps",
+        "outputId": "7c4b6145-c7ed-4afd-eceb-34135ef795ff"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[id: bigint, isPrime: boolean]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
+      "source": [
+        "# Free up executor memeory by unpersisting cached objects\n",
+        "result.unpersist()"
+      ]
     }
   ],
   "metadata": {
