--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -797,6 +797,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#User Defined Functions\n",
+        "- UDFs allow developer to create resuable custom functions\n",
+        "- has performance impact as they cannot be optimized by Catalyst optimizer and have serialization overhead.\n",
+        "- Always used builtin functions if need use the Pandas functions.\n",
+        "- Pandas UDFs allow you to write python functions that operate on batches of rows instead of single rows, leveraging Apache arrow for more efficient Python-JVM serialization.\n"
+      ],
+      "metadata": {
+        "id": "OExpU42N1p0-"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
