--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -514,7 +514,7 @@
       "metadata": {
         "id": "jl0V9DwvEYOd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
         },
         "outputId": "c46b0e55-5efa-406f-ad84-0872640d2382"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +623,7 @@
       "metadata": {
         "id": "kdudWXW2KEcd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -752,7 +752,7 @@
         },
         "outputId": "70a5dec9-42a4-4624-8490-7263c343f622"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +782,7 @@
         },
         "outputId": "7f2f44ca-e8be-4cb5-e1c6-3e16629eee2a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
         "id": "9fbI9UZH8IA6",
         "outputId": "15b22e2c-7f27-46ff-eca1-398fcdcc1014"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -942,7 +942,7 @@
       "metadata": {
         "id": "w9xKaoMV9LYS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +958,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,7 +994,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,7 +1058,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1380,7 +1380,7 @@
       "metadata": {
         "id": "5XlB38kUFbYM"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1390,6 +1390,61 @@
       ],
       "metadata": {
         "id": "nqlOaAxxGyJu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Spark Streaming background\n",
+        "\n",
+        "Spark Streaming introduced in 2013 as an extension to core Spark.\n",
+        "- built on the RDD API\n",
+        "- Using the DStream (Discretized Streams) model.\n",
+        "- Processing data in small time-based (RDD) batches.\n",
+        "\n",
+        "Structured Streaming was introduced in 2016\n",
+        "- Built on Dataframe/dataset APIs\n",
+        "- Introduced event-time processing\n",
+        "- Simplified API with SQL-like operations\n",
+        "- Better handling of late and out-of-order data\n",
+        "\n",
+        "## Microbatching\n",
+        "- Microbatching processes a stream as a series of small batches\n",
+        "- Data is collected into time-based chunks\n",
+        "- Each chunk processed as mini-batch job typical interval of 100 ms to few seconds\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0UQxd5gjEHUH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#DataStreamReader and DataStreamWriter\n",
+        "\n",
+        "###Triggers\n",
+        "- Default Trigger - Processes data as soon as the previous micro-batch completes\n",
+        "- Fixed Interval - Process data at specified time intervals, useful for controlling resource usage.\n",
+        "- Available Now - Process available data then stops\n",
+        "\n",
+        "###Output Modes for structured streaming write output results\n",
+        "\n",
+        "- append - default mode only adds new records to the sink.\n",
+        "- update - modifies existing records and adds new ones\n",
+        "- complete - writes entire result table to sink each time\n"
+      ],
+      "metadata": {
+        "id": "t7pZeYw6HdtN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nzn7nN8rELWA"
       },
       "execution_count": null,
       "outputs": []
